[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/MainScene.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Ship.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Asteroid.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/heart.png" type="Texture" id=4]

[node name="MainScene" type="Node2D"]
script = ExtResource( 1 )

[node name="Ship" parent="." instance=ExtResource( 2 )]
position = Vector2( 76, 200 )

[node name="Asteroid" parent="." instance=ExtResource( 3 )]

[node name="Asteroid2" parent="." instance=ExtResource( 3 )]
position = Vector2( 55, 55 )

[node name="Asteroid4" parent="." instance=ExtResource( 3 )]
position = Vector2( 120, 32 )

[node name="Asteroid3" parent="." instance=ExtResource( 3 )]
position = Vector2( 79, 20 )

[node name="AsteroidTimer" type="Timer" parent="."]

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 112.0
margin_top = 208.0
margin_right = 147.0
margin_bottom = 217.0
columns = 3
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="GridContainer"]
margin_right = 9.0
margin_bottom = 9.0
texture = ExtResource( 4 )

[node name="TextureRect2" type="TextureRect" parent="GridContainer"]
margin_left = 13.0
margin_right = 22.0
margin_bottom = 9.0
texture = ExtResource( 4 )

[node name="TextureRect3" type="TextureRect" parent="GridContainer"]
margin_left = 26.0
margin_right = 35.0
margin_bottom = 9.0
texture = ExtResource( 4 )
[connection signal="hurt" from="Ship" to="." method="_on_Ship_hurt"]
[connection signal="timeout" from="AsteroidTimer" to="." method="_on_AsteroidTimer_timeout"]
